k8s-yaml/nginx-demo/04_nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-demo
  labels:
    app: nginx-demo
spec:
  rules:
  - host: nginx-demo.corp.local
    http:
      paths:
      - backend:
          serviceName: nginx-demo
          servicePort: 80
